--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
                 check_path: /api/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-
+                username_path: email
         api:
             pattern:   ^/api
             stateless: true
